--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,25 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+/vendor/
+vendor/
+vendor
+/Godeps/
+
+# IDE files
+.vscode
+.DS_Store
+.idea
+
+# Misc
+*.fiber.gz
+*.fasthttp.gz
+*.pprof
+*.workspace
+
+# build files
+/dist/
+/packed/
+/target/
+test.db
+/.idea/
